workin on footer

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,5 @@
 extends layout
+extends footer.pug
 
 append head
   //- add page specific styles by appending to the head
@@ -28,3 +29,4 @@ block content
         a(href="/demo") Demo User
       br
       a(href="/login") Login
+  block footer
