--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
         link(rel='stylesheet' href='/stylesheets/navbar.css')
         link(rel='stylesheet' href='/stylesheets/profile.css')
         link(rel='stylesheet' href='/stylesheets/forms.css')
+        link(rel='stylesheet' href='/stylesheets/footer.css')
 
   body
       if (!splash)
