--- a/views/profile.pug
+++ b/views/profile.pug
@@ -15,3 +15,4 @@ block content
                     a(href="/hauntlists/" + hauntlist.id)= hauntlist.title + "(" + Object.keys(hauntlist).length + ")"
         else
             p= "No haunt lists to show yet!"
+block footer
