rudimentary footer done'

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ html
         link(rel='stylesheet' href='/stylesheets/profile.css')
         link(rel='stylesheet' href='/stylesheets/forms.css')
         link(rel='stylesheet' href='/stylesheets/footer.css')
+        script(src="https://kit.fontawesome.com/b4ae7bbf6e.js" crossorigin="anonymous")
 
   body
       if (!splash)
@@ -37,7 +38,7 @@ html
                 a(href="https://www.linkedin.com/in/krista-strucke-044b3369/" target="_blank")
                     i(class="fab fa-linkedin")
                 a(href="https://github.com/kurikurichan" target="_blank")
-                    i(class="fa-brands fa-github-square")
+                    i(class="fa-brands fa-github")
         div(class='ind-links')
             p(class="our-names") Patrick McPherson
             div(class='github-linkedin')
