made copyright box look better

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,28 +32,28 @@ html
   block content
   footer
     div(id="footer")
-        div(class='ind-links')
+        div(class='social-links')
             p(class="our-names") Krista Strucke
             div(class='github-linkedin')
                 a(href="https://www.linkedin.com/in/krista-strucke-044b3369/" target="_blank")
                     i(class="fab fa-linkedin")
                 a(href="https://github.com/kurikurichan" target="_blank")
                     i(class="fa-brands fa-github")
-        div(class='ind-links')
+        div(class='social-links')
             p(class="our-names") Patrick McPherson
             div(class='github-linkedin')
                 a(href="https://www.linkedin.com/in/patrick-mcpherson-438385117/" target="_blank")
                     i(class="fab fa-linkedin")
                 a(href="https://github.com/Patricus" target="_blank")
                     i(class="fab fa-github")
-        div(class='ind-links')
+        div(class='social-links')
             p(class="our-names") Alec Venida
             div(class='github-linkedin')
                 a(href="https://www.linkedin.com/in/alec-venida-66793979/" target="_blank")
                     i(class="fab fa-linkedin")
                 a(href="https://github.com/avenida714" target="_blank")
                     i(class="fab fa-github")
-        div(class='ind-links')
+        div(class='social-links')
             p(class="our-names") June Kim
             div(class='github-linkedin')
                 a(href="https://www.linkedin.com/in/june-k-7b56a1140/" target="_blank")
