--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -11,7 +11,7 @@
     width:100%;
 }
 
-.ind-links {
+.social-links {
     display: flex;
     flex-direction: column;
 }
@@ -23,4 +23,6 @@
 
 .copyright {
     background-color: var(--bistro);
+    border-radius: 5px;
+    box-shadow: 0 0 10px 10px var(--bistro);
 }
