--- a/views/layout.pug
+++ b/views/layout.pug
@@ -38,7 +38,7 @@ html
                 a(href="https://www.linkedin.com/in/krista-strucke-044b3369/" target="_blank")
                     i(class="fab fa-linkedin")
                 a(href="https://github.com/kurikurichan" target="_blank")
-                    i(class="fa-brands fa-github")
+                    i(class="fab fa-github")
         div(class='social-links')
             p(class="our-names") Patrick McPherson
             div(class='github-linkedin')
