--- a/views/reviews.pug
+++ b/views/reviews.pug
@@ -26,7 +26,7 @@ block content
             div(class= "form")
             block content
                 label(for= "review") Create a review
-                textarea(class= "review", name="review" placeholder= "This place is great because...")
+                textarea(class= "review", name="review" placeholder= "This place is great because...")=review
                 button Submit
                 a(href='/haunts/' + haunt.id class='btn btn-cancel') Cancel
 
