--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,3 +1,12 @@
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem; /* footer height */
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
