--- a/views/haunts.pug
+++ b/views/haunts.pug
@@ -8,26 +8,26 @@ block content
       br
       each haunt in haunts
         div(class= 'historical hauntCard')
-          a(href="/haunts/" + haunt.id)
+          a(class="haunt-links" href="/haunts/" + haunt.id)
             img(src='/images/image-' + haunt.id + '.jpeg' alt='image')
             br
             a(href="/haunts/" + haunt.id)= haunt.title
-            p= haunt.score
+            p(class="haunt-score")= haunt.score
     h2="Outdoors"
       br
       each haunt in haunts2
         div(class= 'outdoors hauntCard')
-          a(href="/haunts/" + haunt.id)
+          a(class="haunt-links" href="/haunts/" + haunt.id)
             img(src='/images/image-' + haunt.id + '.jpeg' alt='image')
             br
             a(href="/haunts/" + haunt.id)= haunt.title
-            p= haunt.score
+            p(class="haunt-score")= haunt.score
     h2="Asylum"
       br
       each haunt in haunts3
         div(class= 'asylum hauntCard')
-          a(href="/haunts/" + haunt.id)
+          a(class="haunt-links" href="/haunts/" + haunt.id)
             img(src='/images/image-' + haunt.id + '.jpeg' alt='image')
             br
             a(href="/haunts/" + haunt.id)= haunt.title
-            p= haunt.score
+            p(class="haunt-score")= haunt.score
