--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -6,7 +6,9 @@
     position: absolute;
     bottom:0;
     width:100%;
-    height: 2.5rem;
+    height: 2.5rem; /* height of footer */
+
+    margin-top: 20px;
 }
 
 .social-links {
