--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -19,7 +19,7 @@
 #popupInputs {
   background-color: var(--bistro);
   margin: 15% auto;
-  padding: 20px;
+  padding: 15px;
   border: 1px solid var(--xanadu);
   box-shadow: 0px 1px 5px var(--periwinkle);
   width: 60%;
@@ -42,4 +42,8 @@
   color: var(--bistro);
   box-shadow: 0px 0px 3px var(--periwinkle);
   cursor: pointer;
+}
+
+#newHauntlistInput {
+  width: calc(100% - 20em);
 }
