--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -34,3 +34,35 @@ body, header, nav {
 h1 {
   font-size: 2rem;
 }
+
+
+
+button {
+  background: linear-gradient(to bottom right, black, #fe7f2d);
+  border: 0;
+  border-radius: 12px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 2.5;
+  outline: transparent;
+  padding: 0 1rem;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .2s ease-in-out;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+}
+
+button:not([disabled]):focus {
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem black .125rem .125rem 1rem #fe7f2d;
+}
+
+button:not([disabled]):hover {
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem black, .125rem .125rem 1rem #fe7f2d;
+}
