--- a/public/stylesheets/specific-haunt.css
+++ b/public/stylesheets/specific-haunt.css
@@ -87,11 +87,29 @@ img {
 
 #dropdown-hauntlists {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  right: 0;
+  top: 2em;
   background-color: var(--bistro);
-  width: 100%;
+  width: fit-content;
+  min-width: 10em;
   padding: 0.5rem;
-  box-shadow: 0px 2px 5px var(--periwinkle);
+  padding-left: 1rem;
+  box-shadow: 0px 0px 10px var(--periwinkle);
   z-index: 1;
+  height: fit-content;
+  max-height: 12em;
+  min-height: 2em;
+  overflow-y: scroll;
+  border-radius: 10px;
+}
+
+#dropdownBackground {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .hide {
