--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -22,7 +22,8 @@ a {
 
 h1, h2, h3, h4, h5, h6, a, ol, li, ul, div, span,
 body, header, nav {
-  font-size: 1rem;
+  font: "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 24px;
   color: inherit;
   background-color: transparent;
   margin: 0;
@@ -39,9 +40,10 @@ h1 {
 
 button {
   background: linear-gradient(to bottom right, black, #fe7f2d);
-  border: 0;
+  margin: 8px;
   border-radius: 12px;
-  color: #FFFFFF;
+  color: #0d0505;
+  /* color: #fefefe; */
   cursor: pointer;
   display: inline-block;
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -63,6 +65,11 @@ button:not([disabled]):focus {
   box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem black .125rem .125rem 1rem #fe7f2d;
 }
 
-button:not([disabled]):hover {
+/* button:not([disabled]):hover {
   box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem black, .125rem .125rem 1rem #fe7f2d;
+} */
+
+button:not([disabled]):hover {
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem black, .125rem .125rem 1rem rgb(255, 255, 16);
+  color: rgb(255, 255, 16)
 }
