--- a/public/stylesheets/haunts.css
+++ b/public/stylesheets/haunts.css
@@ -21,6 +21,7 @@ h2 {
   background-color: var(--bistro);
 
   margin-bottom: 20px;
+  flex-grow: 1;
 }
 
 .category-containers {
@@ -54,6 +55,10 @@ img:hover {
   box-shadow: 0px 0px 12px var(--pumpkin);
 }
 
+/* this fixes the footer to the bottom of the haunts page only */
+#footer{
+  position:relative
+}
 /* li {
   display: flex;
   list-style-type: none;
