--- a/views/specificHaunt.pug
+++ b/views/specificHaunt.pug
@@ -39,3 +39,4 @@ block content
           p(id='score')= "Score:" + review.score
         div(class="reviewText")
           p= review.review
+  div(id="footerSpace")
