made login button a button

--- a/views/index.pug
+++ b/views/index.pug
@@ -28,4 +28,5 @@ block content
       button(class= 'button')
         a(href="/demo") Demo User
       br
-      a(href="/login") Login
+      button(class= 'button')
+        a(href="/login") Login
