--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -18,8 +18,8 @@ href{
 
 .login_signin_card {
   position: absolute;
-  height: 350px;
-  width: 300px;
+  /* height: 350px;
+  width: 300px; */
 
   top: 100px;
   right: 100px;
