--- a/views/login.pug
+++ b/views/login.pug
@@ -7,12 +7,13 @@ block content
 
     form(action='/login' method='post')
         input(type='hidden' name='_csrf' value=csrfToken)
-        div(class = "login-form")
-            label(for = "email") Email
-            input(class = "login" type = "email" name = "email" value = email)
+        div(class= "form-box")
+            div(class= "form")
+                label(for= "email") Email
+                input(class= "login" type = "email" name= "email" value= email)
 
-            label(for = "password") Password
-            input(class = "login" type = "password" name = "password")
+                label(for= "password") Password
+                input(class= "login" type= "password" name= "password")
 
-            button(type='submit' class='btn btn-login') Login
-            a(href='/' class='btn btn-cancel') Cancel
+                button(type='submit' class='btn btn-login') Login
+                a(href='/' class='btn btn-cancel') Cancel
