--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -50,6 +50,14 @@
 textarea {
   background-color: var(--xanadu);
   color: var(--cadet);
+  font-weight: bold;
+  resize: none;
+  outline: none;
+
+  width: 300px;
+  height: 150px;
+
+  border: 4px solid var(--periwinkle);
 }
 
 form {
