--- a/views/profile.pug
+++ b/views/profile.pug
@@ -5,11 +5,15 @@ append head
 block content
     div
         h1= currentUser.fullName + "'s Profile"
-        p(class="profile-text")="Name: " + currentUser.fullName
-        if(user && user.id == currentUser.id)
-            p(class="profile-text")="Email: " + user.email
+        br
+        div(class="profile-card")
+            p(class="profile-text")="Name: " + currentUser.fullName
+            if(user && user.id == currentUser.id)
+                p(class="profile-text")="Email: " + user.email
+    br
     div
         h2(id="haunt-title")= "Haunt Lists"
+        br
         div(id="deleteButtons")
             if(user && user.id == currentUser.id)
                 button(id="create") Create a Hauntlist
